--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,12 +3,24 @@
   "version": "1.0.0",
   "description": "E-commerce server side",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix front-end",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "data:import": "node ./seeder",
+    "data:delete": "node ./seeder -d"
   },
   "author": "shina",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "concurrently": "^6.2.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.2",
+    "nodemon": "^2.0.8"
   }
 }
